@@ -1,3 +1,6 @@
+2007/02/14
+.improved c_dv_quantity parsing
+
 2007/02/10
 .corrected parsing constraint_ref
 
